# AI_ML_Homework

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
iocsearcher/: doc_pdf.py  document.py  searcher.py
lib/: iocs_tool.py
